Add state management using useContext for cart items

--- a/src/pages/Shop/shop.css
+++ b/src/pages/Shop/shop.css
@@ -31,3 +31,23 @@
   width: 10rem;
   height: 10rem;
 }
+
+.add-to-cart-button {
+  border-radius: 0.75rem;
+  font-size: 1rem;
+
+  height: 2rem;
+  border: none;
+  box-shadow: 1px 1px 1px 1px #cbd5e1;
+  background-color: #fafafa;
+  color: black;
+  font-weight: 500;
+
+  transition: 0.2s ease;
+}
+
+.add-to-cart-button:hover {
+  color: #f8fafc;
+  background-color: #334155;
+  cursor: pointer;
+}
