--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  align-items: center;
 }
 
 .cart-header {
@@ -12,26 +11,51 @@
 .cart-items {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
 .cart-item {
+  width: 50vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 150px;
+  grid-template-areas: "img desc";
+
+  padding: 0.5rem;
+
+  border: 1px solid none;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 1px;
+}
+
+.cart-item-description {
+  grid-area: desc;
+  text-align: center;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  padding: 0.25rem;
-  width: 50%;
-  height: 15rem;
-  border: 1px solid black;
 }
 
-.cart-item-description {
-  text-align: center;
+.cart-item-description p {
+  margin: none;
+  padding: none;
 }
 
 .cart-item-image {
-  width: 10rem;
-  height: 10rem;
+  margin: 0 auto;
+  grid-area: img;
+  width: auto;
+  height: 100%;
+}
+
+.cart-buttons {
+  display: flex;
+  gap: 0.25rem;
+}
+
+.cart-buttons button:hover {
+  cursor: pointer;
 }
